# embedeval

./: .claude-progress.json  .claude-verify.sh  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.esp  Dockerfile.stm32  LICENSE  PLAN-factor-gap-closure.md  README.md  ROADMAP.md  docker-compose.yml  external_benchmarks.yaml  pyproject.toml
.claude/: agents  obsidian.json  skills
docs/: BENCHMARK-ANALYSIS-2026-03-24.md  BENCHMARK-COMPARISON-2026-04-05.md  BENCHMARK-n3-haiku.md  BENCHMARK-n3-sonnet.md  CONTEXT-QUALITY-MODE.md  CONTRIBUTING.md  INSIGHT-implicit-vs-explicit.md  INSIGHTS.md  LLM-EMBEDDED-CONSIDERATIONS.md  LLM-EMBEDDED-DEVELOPMENT-GUIDE.md  LLM-EMBEDDED-FAILURE-FACTORS.md  LLM-EMBEDDED-TOKEN-SCALING.md  METHODOLOGY.md  PLAN-fix-l1l2-methodology.md  PLAN-paper-level-benchmark.md  PLAN-tc-restructure.md  TC-REVIEW-REPORT-2026-03-28.md  TEST_CASE_CATALOG.md
plans/: PLAN-benchmark-credibility.md  PLAN-benchmark-followup-2026-04-11.md  PLAN-bugfix-scenario.md  PLAN-context-diagnose.md  PLAN-context-quality-mode.md  PLAN-create-all-test-cases.md  PLAN-deep-embedded-checks.md  PLAN-embedeval-v2.md  PLAN-expand-categories.md  PLAN-fix-ci.md  PLAN-hiloop-transpile-readiness.md  PLAN-implicit-prompts.md  PLAN-launch-embedeval-public.md  PLAN-negative-tests.md  PLAN-per-case-effect-classification.md  PLAN-remaining-blindspots.md  PLAN-strengthen-tc-checks.md  PLAN-subtle-negatives.md  PLAN-tc-coverage-fix.md  PLAN-test-command.md  PLAN-token-scaling-embedded.md  PLAN-v3-competitive-parity.md  REVIEW-context-quality-mode-2026-04-18.md  (+5 more)
space/: README.md  (+2 more)
(+1528 files in other folders)
